SERVER-11661 Validation for port command line option in tools