src/mongo/tools/tool_options.cpp
@@ -75,8 +75,9 @@ namespace mongo {
         options->addOptionChaining("host", "host,h", moe::String,
                 "mongo host to connect to ( <set name>/s1,s2 for sets)");
 
-        options->addOptionChaining("port", "port", moe::String,
-                "server port. Can also use --host hostname:port");
+        options->addOptionChaining("port", "port", moe::Int,
+                "server port. Can also use --host hostname:port")
+                                  .validRange(0, 65535);
 
         options->addOptionChaining("ipv6", "ipv6", moe::Switch,
                 "enable IPv6 support (disabled by default)");
@@ -292,8 +293,10 @@ namespace mongo {
 
             if (params.count("port")) {
                 toolGlobalParams.portSet = true;
-                toolGlobalParams.port = params["port"].as<string>();
-                toolGlobalParams.connectionString += ':' + params["port"].as<string>();
+                toolGlobalParams.port = params["port"].as<int>();
+                StringBuilder sb;
+                sb << toolGlobalParams.connectionString << ':' << toolGlobalParams.port;
+                toolGlobalParams.connectionString = sb.str();
             }
         }
         else {
